--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Alexander-Petrovskiy/nightwach-test-ts#readme",
   "devDependencies": {
+    "@types/nightwatch": "^1.3.4",
     "chromedriver": "^92.0.1",
     "nightwatch": "^1.7.8",
     "typescript": "^4.3.5"
