--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "author": "",
+    "type": "module",
     "bugs": {
         "url": "https://github.com/Alexander-Petrovskiy/nightwach-test-ts/issues"
     },
@@ -12,8 +13,13 @@
     },
     "description": "Nightwatch end-to-end test automation boilerplate. Using TypeScript, tsc and Expect.",
     "devDependencies": {
+        "@babel/core": "^7.15.0",
+        "@babel/plugin-transform-typescript": "^7.15.0",
+        "@babel/preset-typescript": "^7.15.0",
+        "@babel/register": "^7.15.3",
         "@types/nightwatch": "^1.3.4",
         "@types/node": "^16.6.2",
+        "babel-plugin-add-module-exports": "^1.0.4",
         "husky": "^7.0.1",
         "lint-staged": "^11.1.2",
         "prettier": "^2.3.2",
